# glasgow-api

./: .dockerignore  .gitignore  Dockerfile  README.md  VISUALIZATION_API.md  pyproject.toml  requirements.txt
.github/worflows/: build-and-deploy-to-docker-hub.yaml
.github/workflows/: build-and-deploy-to-docker-hub.yaml
app/: main.py
app/core/: __init__.py  config.py  logging.py
app/endpoints/: health.py  minio.py  navidrome.py  postgres.py  visualization.py
app/models/: common.py  minio.py  navidrome.py  postgres.py  postgres_requests.py  visualization.py
app/services/health/: __init__.py  service.py
app/services/minio/: __init__.py  service.py
app/services/navidrome/: __init__.py  service.py
app/services/postgres/: __init__.py  service.py
app/services/visualization/: PCA_TSNE_service.py  SPHERIE_service.py  __init__.py  service.py  viz_api.md
app/utils/: minio.py  navidrome.py  postgres.py
k3s/: deployment.yaml  kustomization.yaml
