[project]
name = "glasgow-api"
version = "0.1.0"
description = "Admin API for Glasgow homelab"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "psycopg2-binary>=2.9",
    "minio>=7.2.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.0",
    "numpy>=1.26.0"
]


[dependency-groups]
dev = [
    "ruff>=0.14.6",
]


[tool.ruff]
line-length = 100

[tool.ruff.lint]